# project-classify-fish-sounds

./: .gitattributes  .gitignore  .gitmodules  .zenodo.json  CITATION.cff  LICENSE  README.md
data/: README.md
data/acoustic-data-annotations/: mote-samples.csv  other-samples.csv
data/acoustic-data-annotations/mote-lab/: Call_Variant_ID#_All_Spp_.xlsx  Data_Directory_Info.docx  FilesReviewedSummary.xlsx  Grouper_Total_No._Calls_and_Files_Reviewed.xlsx  Selection_Table_Parameter_Definitions.xlsx  Volunteer_List_and_Times.xlsx  fix-tabs.py
data/acoustic-data-annotations/mote-lab/diff-selection-files_and_unused/: Bermuda003-5801-5850.DSG_RAWD_HMS_21__5__0__DMY_11__8_15.Table.1.selections.txt  DSG_151_Station_B51.txt  (+13 more)
data/training/: .gitattributes
models/: .gitattributes  README.md  fish-sounds-resnet101-balanced-samples-n50
notebooks/: colab-demo_train_resnet101_fastai.ipynb  fish-sounds-resnet101-balanced-samples-n50.csv  train-resnet101-fastai.ipynb
notebooks/dev/: dev_data-exploration.ipynb  dev_data-exploration_all-annotations.ipynb  dev_spectrogram-exploration.ipynb
src/: Dockerfile
src/acoustic-tools/: README.md  requirements.txt  setup.cfg  setup.py
src/acoustic-tools/acoustic_tools/: __init__.py  annotation.py  sample.py
src/acoustic-tools/acoustic_tools/scripts/: create_spectrograms.py  create_training_set.py  move-mote-data.sh  push-model-to-hf.py  rename_training_set_files.py  write_annotation_file.py
src/acoustic-tools/notebooks/: check_annotations.ipynb  dev_parser.ipynb
src/acoustic-tools/tests/data/: sample-data.txt
(+476 files in other folders)
