[metadata]
name = acoustic-tools
version = 0.0.1
description = Provides scripts and tools to create classifiers for passive acoustic data.
url = https://git.axiom/axiom/project-classify-grouper-sounds

[sdist]
formats = gztar, zip

[check-manifest]
ignore =
  .yml
  notes
  notebooks

[options]
install_requires =
    click
    matplotlib
    pandas
    pydub
    torchaudio
package_dir =
    = .
packages = find:
python_requires = >=3.7

[options.entry_points]
console_scripts =
    create-spectrograms = acoustic_tools.scripts.create_spectrograms:main
    create-training-set = acoustic_tools.scripts.create_training_set:main
    rename-training-set-files = acoustic_tools.scripts.rename_training_set_files:main
    write-annotation-file = acoustic_tools.scripts.write_annotation_file:main